[tool.poetry]
name = "test-seleniumbase"
version = "0.1.0"
description = ""
authors = ["jasminexie <ameliasgoldfish@gmail.com>"]

[tool.poetry.dependencies]
python = "^2.7"
setuptools = "^40.6"
seleniumbase = "^1.18"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
